<resources>
    <string name="app_name">csci5115Project</string>
    <string name="title_activity_main">E-Waste Management</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_title">Hello world from the home fragment</string>
    <string name="search_fragment_title">This is a cool search page</string>
    <string name="log_fragment_title">Eventually you log your stuff here</string>
    <string name="notification_fragment_title">0 notifications :(</string>
    <string name="settings_fragment_title">Settings :D</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Landing Page -->
    <string name="productWiki">Product WIKI</string>

    <!-- specific product page -->
    <string name="laptops">Laptops</string>
    <string name="smartphone">Smartphones</string>
    <string name="smartwatches">Smart Watches</string>
    <string name="gamingConsoles">Gaming Consoles</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="batteries">Batteries</string>
    <string name="lightbulb">Lightbulbs</string>
    <string name="charger">Chargers</string>

    <string name="back">back</string>

    <string name="bluetoothDesc"> E-Waste Management Information: \n \t Many bluetooth devices can be taken in to the nearest \n \t Best Buy. Other options involve donating them to a local \n \t Goodwill and if they are no longer repairable, recycling \n \t them.
        \n Brand Average Lifespan: \n 1. Sony: 6-8 years \n 2. Bose: 6-8 years \n 3. Jabra: 3-4 years \n 4. Samsung: 3-5 years \n 5. Raycon: 4-6 years
        \n Most Popular Bluetooth Brands: \n 1. Sony \n 2. Bose \n 3. Jabra \n 4. Samsung \n 5. Raycon</string>

    <string name="gamingConsoleDesc"> E-Waste Management Information: \n \t Many gaming consoles can be taken in to the nearest \n \t Best Buy. Other options involve donating them to a local \n \t Goodwill and if they are no longer repairable, recycling \n \t them.
        \n Brand Average Lifespan: \n 1. Sony: 6-8 years \n 2. Microsoft: 6-8 years \n 3. Nintendo: 9-12 years \n 4. Fairchild: 3-5 years \n 5. Sega: 4-6 years
        \n Most Popular Bluetooth Brands: \n 1. Sony \n 2. Microsoft \n 3. Nintendo \n 4. Fairchild \n 5. Sega</string>

    <string name="smartphoneDesc">E-Waste Management Information: \n \t Many smart phone devices can be taken in to the nearest \n \t Best Buy. Other options involve donating them to a local \n \t Goodwill and if they are no longer repairable, recycling \n \t them.
        \n Brand Average Lifespan: \n 1. Apple: 6-8 years \n 2. Google: 6-8 years \n 3. Android: 3-4 years \n 4. Samsung: 3-5 years \n 5. Nokia: 4-6 years
        \n Most Popular Bluetooth Brands: \n 1. Apple \n 2. Google \n 3. Android \n 4. Samsung \n 5. Nokia</string>

    <string name="smartwatchDesc">E-Waste Management Information: \n \t Many smart watch devices can be taken in to the nearest \n \t Best Buy. Other options involve donating them to a local \n \t Goodwill and if they are no longer repairable, recycling \n \t them.
        \n Brand Average Lifespan: \n 1. Apple: 6-8 years \n 2. Samsung: 6-8 years \n 3. Fitbit: 3-4 years \n 4. Google: 3-5 years \n 5. Fossil: 4-6 years
        \n Most Popular Bluetooth Brands: \n 1. Apple \n 2. Samsung \n 3. Fitbit \n 4. Google \n 5. Fossil</string>

    <string name="laptopDesc">E-Waste Management Information: \n \t Many laptop devices can be taken in to the nearest \n \t Best Buy. Other options involve donating them to a local \n \t Goodwill or selling them.
        \n Brand Average Lifespan: \n 1. Lenovo: 6-8 years \n 2. Dell: 6-8 years \n 3. Apple: 3-4 years \n 4. Microsoft: 3-5 years \n 5. HP: 4-6 years
        \n Most Popular Bluetooth Brands: \n 1. Lenovo \n 2. Dell \n 3. Apple \n 4. Microsoft \n 5. HP</string>

    <string name="lightbulbDesc">E-Waste Management Information: \n \t Many lightbulbs can be taken in to the nearest \n \t local recycling center. Other options involve donating \n \t them to a local Goodwill, giving to a friend, or selling \n \t them.
        \n Brand Average Lifespan: \n 1. Bailey: 6-7 months \n 2. Bosma: 6-8 months \n 3. Bower: 3-4 months \n 4. Coast: 3-5 months \n 5. Culina: 4-6 months
        \n Most Popular Bluetooth Brands: \n 1. Bailey \n 2. Bosma \n 3. Bower \n 4. Coast \n 5. Culina</string>

    <string name="batteriesDesc">E-Waste Management Information: \n \t Many batteries can be taken in to the nearest \n \t battery recycler. Other options involve taking them to the \n \t local  state solid waste authority
        \n Brand Average Lifespan: \n 1. Energizer: 6-8 months \n 2. Duracell: 6-8 months \n 3. Crown: 3-4 months \n 4. Panasonic: 3-5 months \n 5. Optima: 4-6 months
        \n Most Popular Bluetooth Brands: \n 1. Energizer \n 2. Duracell \n 3. Crown \n 4. Panasonic \n 5. Optima</string>

    <string name="chargerDesc">E-Waste Management Information: \n \t Many charging cables can be taken in to the nearest \n \t local recycling center. Other options involve donating \n \t them to a local Goodwill, giving to a friend, or selling \n \t them.
        \n Brand Average Lifespan: \n 1. Apple: 6-8 years \n 2. Android: 6-8 years \n 3. Cable Matters: 3-4 years \n 4. Amazon: 3-5 years \n 5. Lenovo: 4-6 years
        \n Most Popular Bluetooth Brands: \n 1. Apple \n 2. Android \n 3. Cable Matters \n 4. Amazon \n 5. Lenovo</string>


    <string name="commentSectionButton">Send</string>
    <string name="commentSection">add comment</string>
    
    <string-array name="device_categories">
        <item>Phone</item>
        <item>Battery</item>
        <item>Lightbulb</item>
        <item>Gaming Console</item>
        <item>Laptop</item>
        <item>Charger</item>
        <item>Smart Watch</item>
    </string-array>
</resources>
